# corre

./: .dockerignore  .env.sample  .gitignore  BRIEF.md  CAPABILITY_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  corre.toml  corre.toml.linux  corre.toml.macos  corre.toml.windows  docker-compose.yml  rustfmt.toml  venice-models.jsonl  venice_models.json
.github/workflows/: ci.yml
.minesweeper/: config.json
apps/corre-gym/: Cargo.toml  Dockerfile  start-dev.sh  start.sh
apps/corre-gym/migrations/01-initial_schema/: down.sql  up.sql
apps/corre-gym/migrations/02-conversation_exclude_from_context/: down.sql  up.sql
apps/corre-gym/migrations/02-exercises/: up.sql
apps/corre-gym/migrations/03-beta_tester/: down.sql  up.sql
apps/corre-gym/src/: config.rs  github.rs  lib.rs  main.rs  minesweeper.rs
apps/corre-gym/src/assistant/: actions.rs  handler.rs  matching.rs  mod.rs  parser.rs  prompts.rs
apps/corre-gym/src/db/: access.rs  conversation.rs  dashboard.rs  database.rs  entries.rs  exercise_types.rs  exercises.rs  goals.rs  groups.rs  health.rs  logs.rs  migrations.rs  mod.rs  models.rs  progress.rs  schedules.rs  seed.rs  users.rs
apps/corre-gym/src/telegram/: client.rs  mod.rs  types.rs
apps/corre-gym/src/voice/: mod.rs  stt.rs  tts.rs
apps/corre-gym/src/web/: api.rs  auth.rs  handlers.rs  mod.rs
apps/corre-gym/static/: dashboard.js  style.css
apps/corre-gym/templates/: base.html  chat.html  dashboard.html  history.html  login.html  progress.html
apps/corre-gym/tests/: integration_tests.rs
apps/corre-gym/tests/fixtures/: seed_data.json
apps/corre-gym/tests/helpers/: mod.rs
apps/daily-brief/: Cargo.toml  README.md  manifest.toml
apps/daily-brief/src/: lib.rs  main.rs
apps/e2e/: Cargo.toml
apps/e2e/src/: lib.rs
apps/e2e/src/corre_gym/: assertions.rs  auth.rs  fixtures.rs  http.rs  mod.rs  server.rs  world.rs
apps/e2e/src/corre_gym/steps/: background.rs  chat.rs  entries.rs  goals.rs  health.rs  mod.rs  rest_timer.rs  session.rs  sets.rs
apps/e2e/tests/: e2e-corre-gym.rs
apps/e2e/tests/features/corre-gym/: log_workout.feature  rest_timer.feature
apps/e2e/tests/fixtures/: .env.example  corre.toml
apps/rolodex/: Cargo.toml  manifest.toml
apps/rolodex/src/: import.rs  lib.rs  main.rs
apps/rolodex/src/db/: db.rs  strategies.rs
coding-guidelines/: app_guide.md  brief.md  security-best-practices.md
config/: rolodex.yml  topics.json  topics.md  topics.toml  topics.yml
corre-registry/: Dockerfile  README.md  mcp-registry.json  nginx.conf
corre-registry/apps/registered/: daily-brief.json
corre-registry/capabilities/registered/: daily-brief.json
corre-registry/registered/: brave-search.json  telegram.json
crates/corre-capabilities/: Cargo.toml  README.md
crates/corre-capabilities/src/: daily_brief.rs  lib.rs  registry.rs  rolodex.rs  rolodex_import.rs  subprocess.rs  tools.rs
crates/corre-capabilities/src/rolodex_db/: contacts.rs  mod.rs  models.rs  profiles.rs  strategies.rs
crates/corre-cli/: Cargo.toml  Dockerfile  README.md
crates/corre-cli/src/: main.rs
crates/corre-cli/src/setup/: deps.rs  mod.rs  providers.rs  state.rs  steps.rs  systemd.rs  templates.rs  validate.rs
crates/corre-core/: Cargo.toml  README.md
crates/corre-core/src/: app.rs  capability.rs  config.rs  lib.rs  plugin.rs  publish.rs  sandbox.rs  scheduler.rs  secret.rs  service.rs  tracker.rs
crates/corre-dashboard/: Cargo.toml  README.md  build.rs
crates/corre-dashboard/src/: lib.rs  server.rs
crates/corre-dashboard/static/: dashboard.css  dashboard.js
crates/corre-dashboard/templates/: dashboard.html
crates/corre-db/: Cargo.toml
crates/corre-db/src/: contacts.rs  db.rs  lib.rs  models.rs  profiles.rs  strategies.rs
crates/corre-host/: Cargo.toml  README.md
crates/corre-host/src/: lib.rs  registry.rs  subprocess.rs
crates/corre-llm/: Cargo.toml  README.md
crates/corre-llm/src/: lib.rs  openai_compat.rs  provider.rs  types.rs
crates/corre-mcp/: Cargo.toml  README.md
crates/corre-mcp/src/: lib.rs  pool.rs  server_def.rs
crates/corre-news/: Cargo.toml  Dockerfile  README.md
crates/corre-news/src/: archive.rs  cache.rs  config.rs  edition.rs  lib.rs  main.rs  render.rs  search.rs  server.rs
crates/corre-plugin/: Cargo.toml  README.md
crates/corre-plugin/src/: daily_brief.rs  lib.rs  registry.rs  subprocess.rs
crates/corre-registry/: Cargo.toml  README.md
crates/corre-registry/src/: client.rs  deps.rs  installer.rs  lib.rs  manifest.rs  tester.rs
crates/corre-safety/: Cargo.toml  README.md
crates/corre-safety/src/: boundary.rs  config.rs  leak_detector.rs  lib.rs  policy.rs  report.rs  safe_llm.rs  safe_mcp.rs  sanitizer.rs  validator.rs
crates/corre-sdk/: Cargo.toml  README.md
crates/corre-sdk/src/: client.rs  codec.rs  html.rs  lib.rs  llm.rs  manifest.rs  protocol.rs  tools.rs  types.rs
crates/daily-brief/: Cargo.toml  README.md  manifest.toml
crates/daily-brief/src/: lib.rs  main.rs
crates/mcp-smtp/: Cargo.toml  README.md
crates/mcp-smtp/src/: main.rs
crates/mcp-telegram/: Cargo.toml  README.md
crates/mcp-telegram/src/: main.rs
crates/mcp-whatsapp/: Cargo.toml
crates/mcp-whatsapp/src/: main.rs
gym_tracker_plans/: milestone_0_database.md  milestone_1_telegram_text.md  milestone_2_voice_pipeline.md  milestone_3_dashboard.md  milestone_4_schedules.md  milestone_5_health_tracking.md  milestone_6_signal.md  milestone_planning.md  overall_claude.md  overview.md
mcp-registry/: Dockerfile  mcp-registry.json  nginx.conf
mcp-registry/registered/: kagi-search.json  smtp.json
scripts/: build-all.sh  bundle.sh  deploy.sh  docker-entrypoint.sh  generate-registry.sh  install.sh  publish_containers.sh  update_models.sh
scripts/install/defaults/: corre.toml  docker-compose.yml  topics.yml
services/piper/: Dockerfile  README.md  piper_server.py  test_piper_server.py
services/whisper/: Dockerfile  README.md
static/: settings.css  settings.js  style.css  topics.js
templates/: edition.html  newspaper.html  settings.html  topics.html
