[workspace]
resolver = "2"
members = [
    "crates/corre-core",
    "crates/corre-mcp",
    "crates/corre-llm",
    "crates/corre-news",
    "crates/corre-capabilities",
    "crates/corre-safety",
    "crates/corre-cli",
]

[workspace.package]
version = "1.2.0"
edition = "2024"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# Internal crates
corre-core = { path = "crates/corre-core" }
corre-mcp = { path = "crates/corre-mcp" }
corre-llm = { path = "crates/corre-llm" }
corre-news = { path = "crates/corre-news" }
corre-capabilities = { path = "crates/corre-capabilities" }
corre-safety = { path = "crates/corre-safety" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Templating
askama = "0.13"

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13"

# MCP
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }

# Search
tantivy = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Misc
futures = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
url = "2"
ammonia = "4"
aho-corasick = "1"
regex = "1"
rust-embed = "8"
dialoguer = "0.11"
console = "0.15"
