[workspace]
resolver = "2"
members = [
    "crates/corre-sdk",
    "crates/corre-core",
    "crates/corre-mcp",
    "crates/corre-llm",
    "crates/corre-news",
    "crates/corre-capabilities",
    "crates/corre-safety",
    "crates/corre-dashboard",
    "crates/mcp-smtp",
    "crates/mcp-telegram",
    "crates/corre-registry",
    "crates/corre-cli",
    "crates/daily-brief",
]

[workspace.package]
version = "0.16.0"
edition = "2024"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# Internal crates
corre-sdk = { path = "crates/corre-sdk" }
corre-core = { path = "crates/corre-core" }
corre-mcp = { path = "crates/corre-mcp" }
corre-llm = { path = "crates/corre-llm" }
corre-news = { path = "crates/corre-news" }
corre-capabilities = { path = "crates/corre-capabilities" }
corre-safety = { path = "crates/corre-safety" }
corre-dashboard = { path = "crates/corre-dashboard" }
corre-registry = { path = "crates/corre-registry" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Templating
askama = "0.13"

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13"

# MCP
rmcp = { version = "0.1", features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
schemars = "0.8"

# Search
tantivy = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Misc
futures = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
url = "2"
ammonia = "4"
aho-corasick = "1"
base64 = "0.22"
regex = "1"
rust-embed = "8"
dialoguer = "0.11"
console = "0.15"
sysinfo = "0.34"
async-stream = "0.3"
tokio-stream = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
csv = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
dotenvy = "0.15.7"
landlock = "0.4"
libc = "0.2"
