[package]
name = "corre-gym"
version.workspace = true
edition.workspace = true
description = "Voice-driven gym tracker and personal trainer"

[lib]
path = "src/lib.rs"

[[bin]]
name = "corre-gym"
path = "src/main.rs"

[dependencies]
corre-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
