[package]
name = "corre-gym"
version.workspace = true
edition.workspace = true
description = "Voice-driven gym tracker and personal trainer"

[lib]
path = "src/lib.rs"

[[bin]]
name = "corre-gym"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
corre-core = { workspace = true }
corre-llm = { workspace = true }
corre-sdk = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
