[package]
name = "corre-gym"
version.workspace = true
edition.workspace = true
description = "Voice-driven gym tracker and personal trainer"

[lib]
path = "src/lib.rs"

[[bin]]
name = "corre-gym"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
corre-core = { workspace = true }
corre-llm = { workspace = true }
corre-safety = { workspace = true }
corre-sdk = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
