[package]
name = "e2e"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"]}

[dev-dependencies]
dotenvy = "0.15.0"
env_logger = "0.11.3"
cucumber = { version = "0.23.0", features = ["libtest"] }
futures-util = "0.3.30"

[[test]]
name = "e2e-corre-gym" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

