[package]
name = "rolodex"
version.workspace = true
edition.workspace = true
description = "Automated personal contact engagement app for Corre"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rolodex"
path = "src/main.rs"

[dependencies]
corre-sdk = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
csv = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
