[package]
name = "corre-capabilities"
version.workspace = true
edition.workspace = true

[dependencies]
corre-core = { workspace = true }
corre-mcp = { workspace = true }
corre-llm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
