[package]
name = "corre-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "corre"
path = "src/main.rs"

[dependencies]
corre-core = { workspace = true }
corre-mcp = { workspace = true }
corre-llm = { workspace = true }
corre-host = { workspace = true }
corre-safety = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
axum = { workspace = true }
corre-dashboard = { workspace = true }
corre-registry = { workspace = true }
