[package]
name = "corre-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, config, and scheduler for Corre"

[dependencies]
corre-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
