[package]
name = "corre-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
corre-core = { workspace = true }
corre-registry = { workspace = true }
corre-mcp = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
