[package]
name = "corre-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
corre-registry = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
