[package]
name = "corre-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator dashboard web UI and REST API for Corre"

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
corre-registry = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
