[package]
name = "corre-host"
version.workspace = true
edition.workspace = true
description = "Subprocess capability host and registry for Corre"

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
