[package]
name = "corre-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Subprocess app host and CCPP protocol handler for Corre"

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
