[package]
name = "corre-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible LLM provider for Corre"

[dependencies]
corre-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
