[package]
name = "corre-news"
version.workspace = true
edition.workspace = true

[dependencies]
corre-core = { workspace = true }
axum = { workspace = true }
askama = { workspace = true, features = ["serde_json"] }
tantivy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]
tempfile = "3"
