[package]
name = "corre-news"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CorreNews web server for browsing and searching archived editions"

[[bin]]
name = "corre-news"
path = "src/main.rs"

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
daily-brief = { workspace = true }
axum = { workspace = true }
askama = { workspace = true, features = ["serde_json"] }
tantivy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
rust-embed = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tempfile = "3"
