[package]
name = "corre-registry"
version.workspace = true
edition.workspace = true

[dependencies]
corre-core = { workspace = true }
corre-mcp = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
