[package]
name = "corre-registry"
version.workspace = true
edition.workspace = true

[dependencies]
corre-sdk = { workspace = true }
corre-core = { workspace = true }
corre-mcp = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
