[package]
name = "corre-safety"
version.workspace = true
edition.workspace = true

[dependencies]
corre-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aho-corasick = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
