[package]
name = "corre-safety"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prompt injection defense and content sanitization middleware for Corre"

[dependencies]
corre-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aho-corasick = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
