[package]
name = "corre-sdk"
version.workspace = true
edition.workspace = true
description = "SDK for building Corre app plugins"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
ammonia = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
