[package]
name = "mcp-smtp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mcp-smtp"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lettre = { workspace = true }
