[package]
name = "mcp-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for sending messages via Telegram"

[[bin]]
name = "mcp-telegram"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
